--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div>
                 <h2>COMO FUNCIONA</h2>
                 <p class="tcenter">1) O desamassador possui uma ventosa de ultra-sucção que se prende a lataria;</p>
-                <img src="assets/media/nowebp/img-02.png" loading="lazy">
+                <img src="assets/media/nowebp/img-02.png" width="488" height="269" loading="lazy">
                 <p class="tcenter">2) Após preso a lataria, basta puxar com força para voltar o amassado.</p>
-                <img src="assets/media/como usar - pt2.webp" loading="lazy">
+                <img src="assets/media/como usar - pt2.webp" width="489" height="250" loading="lazy">
                 <p class="tcenter">Seu sistema de sucção suporta a pressão exercida, para que o desamassador se mantenha preso a lataria e aguente a força exercida para conseguir trazer o amassado de volta!</p>
                 <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
                 <p><u>DICA</u>: Também pode ser usado um pouco de agua quente para facilitar que o amassado volte!</p>
@@ -66,7 +66,7 @@
                     <li>Desamassa <b>quantas vezes você precisar</b>, dura a vida toda.</li>
                 </ul>
                 <a class="btn-scroll" href="#ofert-scroll">QUERO DESAMASSAR MEU CARRO ASSIM!</a>
-                <img class="btn-selo" src="assets/media/selo-01.webp" loading="lazy">
+                <img class="btn-selo" src="assets/media/selo-01.webp" width="585" height="88" loading="lazy">
             </div>
         </div>
         <div id="bg-02">
@@ -76,7 +76,7 @@
                     <div class="video"><iframe width="560" height="415" src="https://www.youtube.com/embed/ZD-Dk_UOdss?controls=0;rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" style="border: 2px #0A9DFF solid; box-shadow: 0px 5px 10px #0A9DFF;" allowfullscreen></iframe></div>
                 </div>
                 <h2>CONFIRA VOCÊ MESMO<br><span class="blue">OS RESULTADOS</span></h2>
-                <img src="assets/media/antes-depois-01.webp" loading="lazy">
+                <img src="assets/media/antes-depois-01.webp" width="513" height="495" loading="lazy">
                 <a class="btn-scroll" href="#ofert-scroll">QUERO ESSE DESAMASSADOR!</a>
             </div>
         </div>
