--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div id="bg-01">
             <div>
-                <img class="mt0" src="assets/media/logo.webp" width="120" height="30">
+                <img class="mt0" src="assets/media/logo.webp" width="240" height="59">
                 <h1 class="mt0 mb0">Desamasse Seu Carro<br><span class="blue">Em 5 Segundos</span><br>De Forma Simples E Econômica</h1>
                 <img class="img-style01" src="assets/media/webp'gif'-01.webp" width="320" height="320">
                 <p class="tcenter">No Brasil, remover um simples amassado <b>custa no mínimo R$80</b>...</p>
@@ -89,13 +89,13 @@
                         <h3 class="tcenter mt0 mb0">50% DE DESCONTO<br><u>SÓ HOJE!</u></h3>
                     </div>
                     <div class="product-card-body">
-                        <img src="assets/media/img-03.webp">
+                        <img src="assets/media/img-03.webp" width="483" height="362" loading="lazy">
                         <div class="economic">Você economiza 50 reais</div>
                         <p class="tcenter mb0">De <span class="price-before"><s>R$ 119,90</s></span> por</p>
                         <p class="tcenter mt0 mb0">apenas <span class="price-after">3x</span> de <span class="price-after"><u>R$ 19</u></span></p>
                         <p class="tcenter mt0">ou R$ 59,90 à vista!</p>
                         <a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a>
-                        <img class="btn-selo2" src="assets/media/selo-01.webp" loading="lazy">
+                        <img class="btn-selo2" src="assets/media/selo-01.webp" width="585" height="88" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -197,11 +197,11 @@
                     <a href="https://universodascoisas.com.br/atendimento/termos-de-servico">Termos de Uso</a> | <a href="https://universodascoisas.com.br/atendimento/politica-de-privacidade">Políticas</a>
                 </nav>
                 <hr>
-                <img src="assets/media/logo.webp" loading="lazy">
+                <img src="assets/media/logo.webp" width="240" height="59" loading="lazy">
                 <p class="institutional">Este é um produto original da Universo das Coisas. Preços e condições de pagamento exclusivos para compras neste site oficial, podendo variar com o tempo da oferta. Evite comprar produtos mais baratos ou de outras lojas, pois você pode estar sendo enganado(a) por um golpista. Caso você compre os mesmos produtos em outras lojas, não nos responsabilizamos por quaisquer problemas.</p>
                 <hr>
                 <p class="institutional tcenter">Rua José Versolato 111<br>São Bernardo do Campo/SP - CEP: 09750-730<br>© 2022 M. de Abreu Negócios Digitais LTDA<br>CNPJ: 40.908.459/0001-02</p>
-                <img src="https://api.siteblindado.com/v1/seal/aw/www.cea.com.br/seal.png"loading="lazy">
+                <img src="https://api.siteblindado.com/v1/seal/aw/www.cea.com.br/seal.png" loading="lazy">
             </div>
         </div>
     </footer>
