--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                         <h3 class="tcenter mt0 mb0">50% DE DESCONTO<br><u>SÓ HOJE!</u></h3>
                     </div>
                     <div class="product-card-body">
-                        <img src="assets/media/img-03.webp" width="483" height="362" loading="lazy">
+                        <img src="assets/media/img-03.webp">
                         <div class="economic">Você economiza 50 reais</div>
                         <p class="tcenter mb0">De <span class="price-before"><s>R$ 119,90</s></span> por</p>
                         <p class="tcenter mt0 mb0">apenas <span class="price-after">3x</span> de <span class="price-after"><u>R$ 19</u></span></p>
                         <p class="tcenter mt0">ou R$ 59,90 à vista!</p>
                         <a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a>
-                        <img class="btn-selo2" src="assets/media/selo-01.webp" width="585" height="88" loading="lazy">
+                        <img class="btn-selo2" src="assets/media/selo-01.webp">
                     </div>
                 </div>
             </div>
