--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <p class="tcenter mb0">De <span class="price-before"><s>R$ 119,90</s></span> por</p>
                         <p class="tcenter mt0 mb0">apenas <span class="price-after">3x</span> de <span class="price-after"><u>R$ 19</u></span></p>
                         <p class="tcenter mt0">ou R$ 59,90 à vista!</p>
-                        <div><a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a></div>
+                        <div class="checkout"><a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a></div>
                         <img class="btn-selo2" src="assets/media/selo-01.webp" width="585" height="88">
                     </div>
                 </div>
