--- a/index.html
+++ b/index.html
@@ -89,22 +89,36 @@
         </div>
         <div id="ofert" class="darkblue-bg">
             <div id="ofert-scroll">
-                <h2><span class="red">ATENÇÃO ABAIXO:</span><br><span class="white">OPORTUNIDADE ÚNICA</span></h2>
                 <div class="product-card">
-                    <div class="product-card-title">
-                        <p class="tcenter mt0 mb0">Desamassador CarFix</p>
-                        <h3 class="tcenter mt0 mb0">50% DE DESCONTO<br><u>SÓ HOJE!</u></h3>
-                    </div>
+
                     <div class="product-card-body">
+                        <h2><span class="red">SOMENTE HOJE:</span><br><span class="white">70 REAIS DE DESCONTO<br>+ FRETE GRÁTIS</span></h2>
                         <img src="assets/media/img-03.webp" width="483" height="362">
-                        <div class="economic">Você economiza 50 reais</div>
-                        <p class="tcenter mb0">De <span class="price-before"><s>R$ 119,90</s></span> por</p>
-                        <p class="tcenter mt0 mb0">apenas <span class="price-after">3x</span> de <span class="price-after"><u>R$ 19</u></span></p>
-                        <p class="tcenter mt0">ou R$ 59,90 à vista!</p>
+                        <div class="economic">Você economiza 70 reais</div>
+                        <div class="shipping"><i class="fa-solid fa-truck-fast"></i> FRETE GRÁTIS</div>
+                        <p class="tcenter mb0">De <span class="price-before"><s>R$ 139,90</s></span> por</p>
+                        <p class="tcenter mt0 mb0">apenas <span class="price-after"><u>R$ 69,90</u></p>
+                        <p class="tcenter mt0">ou 12x de R$ 7,08</p>
                         <div class="checkout"><a class="btn-buy" href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">COMPRAR</a></div>
                         <img class="btn-selo2" src="assets/media/selo-01.webp" width="585" height="88">
                     </div>
                 </div>
+            </div>
+        </div>
+        <div id="guarantee">
+            <div>
+                <img src="assets/media/nowebp/selo-garantia.png" width="300" height="250" loading="lazy">
+                <h2 class="mb0">7 DIAS DE GARANTIA</h2>
+                <p class="tcenter mt0">100% de Satisfação ou SEU DINHEIRO DE VOLTA!</p>
+                <p>A nossa loja, pensando em você e no seu bem-estar, lhe oferece 100% de segurança na sua compra.</p>
+                <p>E se por algum motivo você não gostar, dentro de 07 dias te devolveremos todo o seu dinheiro.</p>
+                <ul>
+                    <li>Produto com garantia.</li>
+                    <li>Você paga somente o valor descrito em nosso site, não haverá cobranças adicionais de taxas ou impostos.</li>
+                    <li>Enviamos para todo o Brasil com seguro e código de rastreamento online.</li>
+                    <li>Processo de pagamento intermediado totalmente seguro, por boleto bancário ou cartão de crédito.</li>
+                    <li>Suporte ao cliente antes e após a compra caso você tenha qualquer dúvida ou problema, chat de atendimento.</li>
+                </ul>
             </div>
         </div>
         <div>
@@ -177,20 +191,26 @@
                 <p class="tcenter">Quer enviar sua avaliação?<br><a href="https://universodascoisas.com.br/atendimento/fale-com-a-gente"><u>FALE CONOSCO</u></a>!</p>
             </div>
         </div>
-        <div id="guarantee">
+        <div>
             <div>
-                <img src="assets/media/nowebp/selo-garantia.png" width="300" height="250" loading="lazy">
-                <h2 class="mb0">7 DIAS DE GARANTIA</h2>
-                <p class="tcenter mt0">100% de Satisfação ou SEU DINHEIRO DE VOLTA!</p>
-                <p>A nossa loja, pensando em você e no seu bem-estar, lhe oferece 100% de segurança na sua compra.</p>
-                <p>E se por algum motivo você não gostar, dentro de 07 dias te devolveremos todo o seu dinheiro.</p>
-                <ul>
-                    <li>Produto com garantia.</li>
-                    <li>Você paga somente o valor descrito em nosso site, não haverá cobranças adicionais de taxas ou impostos.</li>
-                    <li>Enviamos para todo o Brasil com seguro e código de rastreamento online.</li>
-                    <li>Processo de pagamento intermediado totalmente seguro, por boleto bancário ou cartão de crédito.</li>
-                    <li>Suporte ao cliente antes e após a compra caso você tenha qualquer dúvida ou problema, chat de atendimento.</li>
-                </ul>
+                <h2>PERGUNTAS FREQUENTES</h2>
+                <details>
+                    <summary>Tem garantia?</summary>
+                    <p>Sim! Caso tenha algum problema com nosso produto basta entrar em contato em até 7 dias e devolveremos 100% do seu dinheiro.</p>
+                </details>
+                <details>
+                    <summary>Chega em quanto tempo?</summary>
+                    <p>Nosso prazo de entrega é de 1 a 3 semanas após o envio. Enviaremos também o código de rastreamento para você acompanhar o seu pedido.</p>
+                </details>
+                <details>
+                    <summary>Quais as formas de pagamento?</summary>
+                    <p>Você pode realizar o pagamento do seu pedido com: Cartão de crédito, Pix ou Boleto.</p>
+                </details>
+                <details class="mb18">
+                    <summary>Como comprar?</summary>
+                    <p>Basta preencher as informações para o envio do produto e efetuar o pagamento. Após isso, enviaremos o seu pedido no próximo dia útil.</p>
+                    <p><b>Para efetuar o pedido do seu produto você pode <a href="https://universodascoisas2.pay.yampi.com.br/r/R3VN2KHMXI">clicar aqui</a>.</b></p>
+                </details>
             </div>
         </div>
     </main>
